--- a/port-angular/src/app/components/profile-info/profile-info.component.html
+++ b/port-angular/src/app/components/profile-info/profile-info.component.html
@@ -1,14 +1,41 @@
 <div class="screen d-flex justify-content-center align-items-center">
   <div class="container">
     <div class="row">
-      <div class="col-6">
+      <div class="col-md-6 col-12">
         <h1>Full Stack Developer</h1>
         <i class="bi bi-github"></i>
         <i class="bi bi-linkedin"></i>
       </div>
-      <div class="col-6">
+      <div class="col-md-6 col-12">
         <h2>Mateus Suzuki</h2>
-        <p>Olá! me chamo Mateus, tenho 22 anos e estudo programação faz 1 ano e meio </p>
+        <p> Olá! me chamo Mateus, tenho 22 anos e estudo programação há um ano e meio </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="projects">
+  <div class="container">
+    <div class="row">
+      <div class="col-4">
+        <div class="imgMonitor">
+          <img src="assets/imagesScreen/monitor.png" alt="">
+          <img src="assets/imagesProject/image-valorant.jpg" alt="" class="valorantMonitor">
+          <div class="imgTablet">
+            <img src="assets/imagesScreen/tablet.png" alt="">
+            <img src="assets/imagesProject/image-valorant-tablet.jpg" alt="" class="valorantTablet">
+          </div>
+          <div class="imgSmartphone">
+            <img src="assets/imagesScreen/smartphone.png" alt="">
+            <img src="assets/imagesProject/image-valorant-smartphone.jpg" alt="" class="valorantSmartphone">
+          </div>
+        </div>
+      </div>
+      <div class="col-4">
+        crud
+      </div>
+      <div class="col-4">
+        alguma coisa
       </div>
     </div>
   </div>
