alterando imagens do projeto valorant

--- a/port-angular/src/app/components/profile-info/profile-info.component.html
+++ b/port-angular/src/app/components/profile-info/profile-info.component.html
@@ -18,17 +18,10 @@
   <div class="container">
     <div class="row">
       <div class="col-4">
-        <div class="imgMonitor">
-          <img src="assets/imagesScreen/monitor.png" alt="">
-          <img src="assets/imagesProject/image-valorant.jpg" alt="" class="valorantMonitor">
-          <div class="imgTablet">
-            <img src="assets/imagesScreen/tablet.png" alt="">
-            <img src="assets/imagesProject/image-valorant-tablet.jpg" alt="" class="valorantTablet">
-          </div>
-          <div class="imgSmartphone">
-            <img src="assets/imagesScreen/smartphone.png" alt="">
-            <img src="assets/imagesProject/image-valorant-smartphone.jpg" alt="" class="valorantSmartphone">
-          </div>
+        <div class="deviceProject">
+          <img src="assets/imagesProject/monitor.valorant.png" alt="imagem monitor valorant">
+          <img src="assets/imagesProject/tablet.valorant.png" class="imgTablet" alt="imagem tablet valorant">
+          <img src="assets/imagesProject/smartphone.valorant.png" class="imgSmartphone" alt="imagem smartphone valorant">
         </div>
       </div>
       <div class="col-4">
