--- a/port-angular/src/app/components/profile-info/profile-info.component.scss
+++ b/port-angular/src/app/components/profile-info/profile-info.component.scss
@@ -12,20 +12,10 @@ i {
   margin: 15px;
 }
 
-.imgMonitor {
+.deviceProject {
   position: relative;
   width: 300px;
   height: 200px;
-}
-
-.valorantMonitor {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -57.5%);
-  width: 94%;
-  height: 79%;
-  z-index: -5;
 }
 
 .imgTablet {
@@ -34,37 +24,16 @@ i {
   left: 50%;
   transform: translate(-160%, -20%);
   width: 40%;
-  height: 40%;
-}
-
-.valorantTablet {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -21.2%);
-  width: 87.9%;
-  height: 150%;
-  box-shadow: 5px 7px 10px 5px;
-  z-index: -5;
+  height: 90%;
 }
 
 .imgSmartphone {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-390%, 30%);
+  transform: translate(-380%, 10%);
   width: 20%;
-  height: 40%;
-}
-
-.valorantSmartphone {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -21%);
-  width: 85%;
-  height: 130%;
-  z-index: -5;
+  height: 70%;
 }
 
 img {
