--- a/port-angular/src/app/components/profile-info/profile-info.component.html
+++ b/port-angular/src/app/components/profile-info/profile-info.component.html
@@ -23,9 +23,14 @@
           <img src="assets/imagesProject/tablet.valorant.png" class="imgTablet" alt="imagem tablet valorant">
           <img src="assets/imagesProject/smartphone.valorant.png" class="imgSmartphone" alt="imagem smartphone valorant">
         </div>
+        
       </div>
-      <div class="col-4">
-        crud
+      <div class="col-4 d-flex justify-content-center">
+        <div class="deviceProject">
+          <img src="assets/imagesProject/monitor.crud.png" alt="imagem monitor valorant">
+          <img src="assets/imagesProject/tablet.crud.png" class="imgTablet" alt="imagem tablet valorant">
+          <img src="assets/imagesProject/smartphone.crud.png" class="imgSmartphone" alt="imagem smartphone valorant">
+        </div>
       </div>
       <div class="col-4">
         alguma coisa
