hover para informações do projeto

--- a/port-angular/src/app/components/profile-info/profile-info.component.scss
+++ b/port-angular/src/app/components/profile-info/profile-info.component.scss
@@ -12,30 +12,6 @@ i {
   margin: 15px;
 }
 
-.deviceProject {
-  position: relative;
-  width: 300px;
-  height: 200px;
-}
-
-.imgTablet {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-160%, -20%);
-  width: 40%;
-  height: 90%;
-}
-
-.imgSmartphone {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-380%, 10%);
-  width: 20%;
-  height: 70%;
-}
-
-img {
-  width: 100%;
+p {
+  font-size: 1.3em;
 }
