--- a/port-angular/src/app/components/profile-info/profile-info.component.html
+++ b/port-angular/src/app/components/profile-info/profile-info.component.html
@@ -7,34 +7,12 @@
         <i class="bi bi-linkedin"></i>
       </div>
       <div class="col-md-6 col-12">
+        <h3>Perfil</h3>
         <h2>Mateus Suzuki</h2>
-        <p> Olá! me chamo Mateus, tenho 22 anos e estudo programação há um ano e meio </p>
+        <p> Olá! me chamo Mateus, tenho 22 anos e sou desenvolver full stack, minha linguagem principal é o java script junto com o uso de angular e nodejs, mas sempre procurando me adaptar a outras linguagens, frameworks e etc </p>
       </div>
     </div>
   </div>
 </div>
 
-<div class="projects">
-  <div class="container">
-    <div class="row">
-      <div class="col-4">
-        <div class="deviceProject">
-          <img src="assets/imagesProject/monitor.valorant.png" alt="imagem monitor valorant">
-          <img src="assets/imagesProject/tablet.valorant.png" class="imgTablet" alt="imagem tablet valorant">
-          <img src="assets/imagesProject/smartphone.valorant.png" class="imgSmartphone" alt="imagem smartphone valorant">
-        </div>
-        
-      </div>
-      <div class="col-4 d-flex justify-content-center">
-        <div class="deviceProject">
-          <img src="assets/imagesProject/monitor.crud.png" alt="imagem monitor valorant">
-          <img src="assets/imagesProject/tablet.crud.png" class="imgTablet" alt="imagem tablet valorant">
-          <img src="assets/imagesProject/smartphone.crud.png" class="imgSmartphone" alt="imagem smartphone valorant">
-        </div>
-      </div>
-      <div class="col-4">
-        alguma coisa
-      </div>
-    </div>
-  </div>
-</div>
+<app-projects/>
