arrumando o content da box

--- a/port-angular/src/app/components/projects/projects.component.html
+++ b/port-angular/src/app/components/projects/projects.component.html
@@ -41,14 +41,17 @@
   <div class="row">
     <div class="col-6">
       <div class="row box">
-          <div class="col-12 col-md-6 deviceProject">
+          <div class="col-12 col-md-6 deviceProject pt-2">
             <img src="assets/imagesProject/monitor.valorant.png" alt="imagem monitor valorant">
             <img src="assets/imagesProject/tablet.valorant.png" class="imgTablet" alt="imagem tablet valorant">
             <img src="assets/imagesProject/smartphone.valorant.png" class="imgSmartphone" alt="imagem smartphone valorant">
           </div>
+          <div class="backBox">
+
+          </div>
           <div class="content">
               <h2>Projeto Wiki Valorant</h2>
-              <p>Nesse projeto eu consumi uma api sobre o jogo, nele contém animações de fade para alteração de conteúdo, modal etc.</p>
+              <p>Nesse projeto eu consumi uma api sobre o jogo chamado "Valorant", nele contém animações de fade para alteração de conteúdo, modal etc.</p>
           </div>
       </div>
     </div>
