--- a/port-angular/src/app/components/profile-info/profile-info.component.html
+++ b/port-angular/src/app/components/profile-info/profile-info.component.html
@@ -1,4 +1,4 @@
-<div class="screen d-flex justify-content-center align-items-center">
+<div class="screen d-flex justify-content-center align-items-center mb-4">
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-12">
