--- a/port-angular/src/app/components/projects/projects.component.scss
+++ b/port-angular/src/app/components/projects/projects.component.scss
@@ -32,22 +32,36 @@ img {
 }
 
 .box:hover .content {
-  transform: translate(107%);
-  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.056),
-  0 6.7px 5.3px rgba(0, 0, 0, 0.081), 0 12.5px 10px rgba(0, 0, 0, 0.1),
-  0 22.3px 17.9px rgba(0, 0, 0, 0.119),
+  transform: translate(95%);
+}
+
+.backBox {
+  position: absolute;
+  top: 0;
+  left: -15%;
+  box-shadow: 0 2.8px 16px rgba(0, 0, 0, 0.056),
+  0 6.7px 16px rgba(0, 0, 0, 0.081), 0 12.5px 10px rgba(0, 0, 0, 0.1),
+  0 22.3px 17.9px rgba(0, 0, 0, 0.119);
+  background-color: #fff;
+  width: 450px;
+  height: 270px;
+  z-index: 1;
+  border-radius: 5px;
 }
 
 
 .content {
   position: absolute;
   top: 0;
-  left: 0;
-  width: 300px;
-  height: 250px;
+  left: -13%;
+  width: 450px;
+  height: 270px;
   padding: 1.5rem;
-  padding-top: 0;
+  padding-top: 10px;
   background-color: #fff;
-  z-index: 1;
+  z-index: -1;
   transition: 0.5s ease-in-out;
+  border-radius: 5px;
+  box-shadow: 4px 4px 7px 0px rgba(0, 0, 0, 0.644);
+
 }
