arrumando projetos, alterando animação e adicionando o projeto crud

--- a/port-angular/src/app/components/projects/projects.component.html
+++ b/port-angular/src/app/components/projects/projects.component.html
@@ -1,72 +1,29 @@
-<!-- <div class="container">
-  <div class="row">
-    <div class="col-6">
-      <div class="row">
-        <div class="col-12 col-md-6 deviceProject">
-          <img src="assets/imagesProject/monitor.valorant.png" alt="imagem monitor valorant">
-          <img src="assets/imagesProject/tablet.valorant.png" class="imgTablet" alt="imagem tablet valorant">
-          <img src="assets/imagesProject/smartphone.valorant.png" class="imgSmartphone" alt="imagem smartphone valorant">
-        </div>
-      </div>
-    </div>
-
-    <div class="col-6">
-      <div class="row g-3">
-        <div class="col-md-6 deviceProject">
-          <img src="assets/imagesProject/monitor.valorant.png" alt="imagem monitor valorant">
-          <img src="assets/imagesProject/tablet.valorant.png" class="imgTablet" alt="imagem tablet valorant">
-          <img src="assets/imagesProject/smartphone.valorant.png" class="imgSmartphone" alt="imagem smartphone valorant">
-        </div>
-        <div class="col-md-6">
-          <div class="card-body">
-            <h5 class="card-title">Projeto Wiki Valorant</h5>
-            <p class="card-text">Esse projeto </p>
-            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-6 d-flex justify-content-center">
-      <div class="deviceProject">
-        <img src="assets/imagesProject/monitor.crud.png" alt="imagem monitor crud">
-        <img src="assets/imagesProject/tablet.crud.png" class="imgTablet" alt="imagem tablet crud">
-        <img src="assets/imagesProject/smartphone.crud.png" class="imgSmartphone" alt="imagem smartphone crud">
-      </div>
-    </div>
-  </div>
-</div> -->
 
 <div class="container">
-  <div class="row">
-    <div class="col-6">
-      <div class="row box">
-          <div class="col-12 col-md-6 deviceProject pt-2">
-            <img src="assets/imagesProject/monitor.valorant.png" alt="imagem monitor valorant">
-            <img src="assets/imagesProject/tablet.valorant.png" class="imgTablet" alt="imagem tablet valorant">
-            <img src="assets/imagesProject/smartphone.valorant.png" class="imgSmartphone" alt="imagem smartphone valorant">
-          </div>
-          <div class="backBox">
 
+  <div class="row">
+      <div class = "col-6 card">
+        <div class = "image">
+          <img src ="assets/imagesProject/projectValorant.png">
+          <div class="d-flex justify-content-center py-2">
+            <h2>Projeto Valorant</h2>
           </div>
-          <div class="content">
-              <h2>Projeto Wiki Valorant</h2>
-              <p>Nesse projeto eu consumi uma api sobre o jogo chamado "Valorant", nele contém animações de fade para alteração de conteúdo, modal etc.</p>
+        </div>
+        <div class = "content">
+          <p class="m-0">Nesse projeto foi feito uma Wiki do jogo chamado "Valorant" da empresa "Riot Games", ele foi feito consumindo uma API externa e nele contém animações de fade, transições, modals e etc</p>
+        </div>
+      </div>
+
+      <div class = "col-6 card">
+        <div class = "image">
+          <img src ="assets/imagesProject/projectCrud.png">
+          <div class="d-flex justify-content-center py-2">
+            <h2>Projeto Crud</h2>
           </div>
+        </div>
+        <div class = "content">
+          <p class="m-0">Nesse projeto foi feito um crud com paginação, ordenação etc</p>
+        </div>
       </div>
     </div>
-    <!-- <div class="col-6">
-      <div class="box">
-          <div class="imgBox">
-            <img src="assets/imagesProject/monitor.crud.png" alt="imagem monitor crud">
-            <img src="assets/imagesProject/tablet.crud.png" class="imgTablet" alt="imagem tablet crud">
-            <img src="assets/imagesProject/smartphone.crud.png" class="imgSmartphone" alt="imagem smartphone crud">
-          </div>
-          <div class="content">
-              <h2>Dolly Seth</h2>
-              <span>Digital Marketing</span>
-          </div>
-      </div>
-    </div> -->
-  </div>
 </div>
