media query projetos

--- a/port-angular/src/app/components/profile-info/profile-info.component.html
+++ b/port-angular/src/app/components/profile-info/profile-info.component.html
@@ -1,7 +1,7 @@
 <div class="screen d-flex justify-content-center align-items-center mb-4">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-12">
+      <div class="col-md-6 col-12 pb-5">
         <h1>Full Stack Developer</h1>
         <i class="bi bi-github"></i>
         <i class="bi bi-linkedin"></i>
