--- a/port-angular/src/app/components/profile-info/profile-info.component.scss
+++ b/port-angular/src/app/components/profile-info/profile-info.component.scss
@@ -1,3 +1,4 @@
+
 .screen {
   height: 50vh;
   background-color: rgba(253, 252, 252, 0.753);
@@ -14,4 +15,10 @@ i {
 
 p {
   font-size: 1.3em;
+}
+
+@media(max-width: 768px) {
+  .screen {
+    height: 65vh;
+  }
 }
