--- a/port-angular/src/app/components/projects/projects.component.html
+++ b/port-angular/src/app/components/projects/projects.component.html
@@ -1,8 +1,9 @@
 
 <div class="container">
 
-  <div class="row">
-      <div class = "col-6 card">
+  <div class="row justify-content-around">
+
+      <div class = "col-12 col-md-6 card">
         <div class = "image">
           <img src ="assets/imagesProject/projectValorant.png">
           <div class="d-flex justify-content-center py-2">
@@ -10,11 +11,11 @@
           </div>
         </div>
         <div class = "content">
-          <p class="m-0">Nesse projeto foi feito uma Wiki do jogo chamado "Valorant" da empresa "Riot Games", ele foi feito consumindo uma API externa e nele contém animações de fade, transições, modals e etc</p>
+          <p class="m-0">Nesse projeto foi feito uma Wiki do jogo chamado "Valorant" da empresa "Riot Games", ele foi feito consumindo uma API externa usando o Angular</p>
         </div>
       </div>
 
-      <div class = "col-6 card">
+      <div class = "col-12 col-md-6 card">
         <div class = "image">
           <img src ="assets/imagesProject/projectCrud.png">
           <div class="d-flex justify-content-center py-2">
@@ -22,7 +23,7 @@
           </div>
         </div>
         <div class = "content">
-          <p class="m-0">Nesse projeto foi feito um crud com paginação, ordenação etc</p>
+          <p class="m-0">Nesse projeto é um simples crud com paginação e ordenação utilizando o Angular e o nodejs</p>
         </div>
       </div>
     </div>
