--- a/port-angular/src/app/components/profile-info/profile-info.component.html
+++ b/port-angular/src/app/components/profile-info/profile-info.component.html
@@ -1,18 +1,29 @@
 <div class="screen d-flex justify-content-center align-items-center mb-4">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-12 pb-5">
-        <h1>Full Stack Developer</h1>
-        <i class="bi bi-github"></i>
-        <i class="bi bi-linkedin"></i>
-      </div>
       <div class="col-md-6 col-12">
-        <h3>Perfil</h3>
-        <h2>Mateus Suzuki</h2>
-        <p> Olá! me chamo Mateus, tenho 22 anos e sou desenvolver full stack, minha linguagem principal é o java script junto com o uso de angular e nodejs, mas sempre procurando me adaptar a outras linguagens, frameworks e etc </p>
+        <h1>Full Stack Developer</h1>
+        <div class="ms-1 mt-3 row">
+          <div class="socialMedia col-auto">
+            <a href="https://github.com/mateussuzuki">
+              <i class="bi bi-github"></i>
+            </a>
+          </div >
+          <div class="socialMedia col-auto">
+            <a href="https://www.linkedin.com/in/mateus-suzuki-a80b91205/">
+              <i class="bi bi-linkedin"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 col-12 d-flex flex-column align-items-start justify-content-center">
+        <h2 class="pb-2">Mateus Suzuki</h2>
+        <p> Olá! me chamo Mateus, tenho 22 anos e sou desenvolver full stack, minha linguagem principal é o java script
+          junto com o uso de angular e nodejs, mas sempre procurando me adaptar a outras linguagens, frameworks e etc
+        </p>
       </div>
     </div>
   </div>
 </div>
 
-<app-projects/>
+<app-projects />
