--- a/port-angular/src/app/components/profile-info/profile-info.component.html
+++ b/port-angular/src/app/components/profile-info/profile-info.component.html
@@ -1,4 +1,4 @@
-<div class="screen d-flex justify-content-center align-items-center mb-4">
+<div class="screen d-flex justify-content-center align-items-center">
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-12">
@@ -8,7 +8,7 @@
             <a href="https://github.com/mateussuzuki">
               <i class="bi bi-github"></i>
             </a>
-          </div >
+          </div>
           <div class="socialMedia col-auto">
             <a href="https://www.linkedin.com/in/mateus-suzuki-a80b91205/">
               <i class="bi bi-linkedin"></i>
