--- a/port-angular/src/app/components/profile-info/profile-info.component.scss
+++ b/port-angular/src/app/components/profile-info/profile-info.component.scss
@@ -3,9 +3,9 @@
 }
 
 .screen {
-  height: 50vh;
-  background: rgb(199,192,209);
-  background: radial-gradient(circle, rgb(105, 82, 141) 0%, rgba(57, 21, 100, 0.911) 100%);
+  height: 53vh;
+  // background: radial-gradient(circle, rgb(76, 60, 95) 0%, rgb(73, 54, 94) 30%, rgba(10, 0, 24, 0.87) 100%);
+  background: radial-gradient(circle, rgb(83, 68, 100) 0%, rgb(95, 70, 121) 30%, rgba(10, 0, 24, 0.87) 100%);
 }
 
 h1 {
