--- a/port-angular/src/app/components/projects/projects.component.html
+++ b/port-angular/src/app/components/projects/projects.component.html
@@ -1,30 +1,34 @@
 
-<div class="container">
-
-  <div class="row justify-content-around">
-
-      <div class = "col-12 col-md-6 card">
-        <div class = "image">
-          <img src ="assets/imagesProject/projectValorant.png">
-          <div class="d-flex justify-content-center py-2">
-            <h2>Projeto Valorant</h2>
+<div class="screen">
+  <div class="container">
+  
+    <div class="row justify-content-around">
+  
+        <div class = "col-12 col-md-6 card">
+          <div class = "image">
+            <img src ="assets/imagesProject/projectValorant.png">
+            <div class="d-flex justify-content-center py-2">
+              <h2>Projeto Valorant</h2>
+            </div>
+          </div>
+          <div class = "content">
+            <p class="m-0">Nesse projeto foi feito uma Wiki do jogo chamado "Valorant" da empresa "Riot Games", ele foi feito consumindo uma API externa usando o Angular.</p>
+            <button class="btn">Ver Projeto</button>
           </div>
         </div>
-        <div class = "content">
-          <p class="m-0">Nesse projeto foi feito uma Wiki do jogo chamado "Valorant" da empresa "Riot Games", ele foi feito consumindo uma API externa usando o Angular</p>
-        </div>
-      </div>
-
-      <div class = "col-12 col-md-6 card">
-        <div class = "image">
-          <img src ="assets/imagesProject/projectCrud.png">
-          <div class="d-flex justify-content-center py-2">
-            <h2>Projeto Crud</h2>
+  
+        <div class = "col-12 col-md-6 card">
+          <div class = "image">
+            <img src ="assets/imagesProject/projectCrud.png">
+            <div class="d-flex justify-content-center py-2">
+              <h2>Crud</h2>
+            </div>
+          </div>
+          <div class = "content">
+            <p class="m-0">Nesse projeto é um simples crud com paginação e ordenação utilizando o Angular e o nodejs</p>
+            <button class="btn">Ver Projeto</button>
           </div>
         </div>
-        <div class = "content">
-          <p class="m-0">Nesse projeto é um simples crud com paginação e ordenação utilizando o Angular e o nodejs</p>
-        </div>
       </div>
-    </div>
+  </div>
 </div>
